k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telescope-api
  labels:
    app: telescope-api
spec:
  selector:
    matchLabels:
      app: telescope-api
  template:
    metadata:
      labels:
        app: telescope-api
    spec:
      containers:
      - name: telescope-api
        image: turbolent/telescope:latest
        ports:
        - containerPort: 8080
