k8s/duckling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duckling
  labels:
    app: duckling
spec:
  selector:
    matchLabels:
      app: duckling
  template:
    metadata:
      labels:
        app: duckling
    spec:
      containers:
      - name: duckling
        image: turbolent/duckling:latest
        ports:
        - containerPort: 8000
