k8s/debugger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telescope-debugger
  labels:
    app: telescope-debugger
spec:
  selector:
    app: telescope-debugger
  ports:
  - port: 80
    targetPort: 80
