k8s/duckling-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: duckling
  labels:
    app: duckling
spec:
  selector:
    app: duckling
  ports:
  - port: 8000
    targetPort: 8000
