k8s/interface-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telescope-interface
  labels:
    app: telescope-interface
spec:
  selector:
    app: telescope-interface
  ports:
  - port: 80
    targetPort: 80
