k8s/interface-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: interface
spec:
  rules:
  - host: telescope.turbolent.com
    http:
      paths:
      - backend:
          serviceName: telescope-interface
          servicePort: 80
        path: /
  tls:
  - hosts:
    - telescope.turbolent.com
    secretName: interface-tls
